fix(about): remove vw-based padding-top causing gap on inner page hero
Tablet had 35vw and mobile had 50vw padding-top on .layout-creative hero,
creating a large blank gap above headings. Replaced with fixed 80px/60px.

--- a/css/layout.css
+++ b/css/layout.css
@@ -966,7 +966,7 @@
 /* section started tablet */
 @media (max-width: 1199px) {
 	.section.started.layout-creative, .section.started.layout-post-creative {
-		padding-top: 35vw;
+		padding-top: 80px;
 		padding-left: 50px;
 		padding-right: 50px;
 	}
@@ -1052,7 +1052,7 @@
 
 	.section.started.layout-creative,
 	.section.started.layout-post-creative {
-		padding-top: 50vw;
+		padding-top: 60px;
 		padding-left: 30px;
 		padding-right: 30px;
 		padding-bottom: 30px;
